# cuda-nn

./: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json  README.md
src/: activation.h  fully_connected.h  functions.h  helpers.h  initialise.h  linear.h  main.cpp  matrix2d.cu  matrix2d.h  optimiser.h
src/mnist/: CMakeLists.txt  mnist.cpp  mnist.h
